<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.omarz.tipapplication.MainActivity"
    tools:layout_editor_absoluteY="89dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="291dp"
        android:layout_height="43dp"
        android:text="@string/tip_this_much"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintRight_toLeftOf="@+id/totalTip"
        android:layout_marginRight="102dp"
        android:layout_marginEnd="63dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/totalTip"
        tools:layout_constraintBaseline_creator="1" />

    <EditText
        android:id="@+id/tipPercentage"
        style="@style/editTextStyle"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/enter_percentage"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        android:layout_marginEnd="191dp"
        android:layout_marginStart="191dp"
        tools:layout_editor_absoluteY="303dp"
        tools:layout_editor_absoluteX="191dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_want_to_tip"
        android:textSize="36sp"
        tools:layout_editor_absoluteY="260dp"
        tools:layout_editor_absoluteX="69dp" />

    <TextView
        android:id="@+id/totalTip"
        android:layout_width="127dp"
        android:layout_height="49dp"
        android:text="@string/_0"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_marginEnd="38dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="221dp"
        android:layout_marginRight="38dp" />

    <EditText
        android:id="@+id/billTotal"
        style="@style/editTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_bill_total"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:textAlignment="center"
        tools:layout_editor_absoluteY="163dp"
        tools:layout_editor_absoluteX="191dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_much_did_you_pay"
        android:textAlignment="center"
        android:textSize="36sp"
        android:layout_marginEnd="35dp"
        tools:layout_editor_absoluteY="119dp"
        tools:layout_editor_absoluteX="106dp" />

    <Button
        android:id="@+id/tipCalc"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="363dp"
        android:layout_height="76dp"
        android:text="@string/calculate"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/totalTip"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="118dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.554" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/picture"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
